--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ biopython==1.68
 Cython==0.25.2
 dj-database-url==0.4.2
 Django==1.10.4
+psycopg2==2.6.2
 gunicorn==19.6.0
 numpy==1.11.3
 primer3-py==0.5.1
